# analytic_infall

./: .hgtags  AUTHORS  Dockerfile  Dockerfile.autotools  Makefile.ORIG  Makefile.am  README  configure.in  devo2.c  devo2.h  devo2_test.c  ga_test.c  grow_array.c  grow_array.h  hfsline.c  hfsline.h  hfsmap.c  hill5.c  hill5.h  hill5_devo.c  hill5_hybrid.c  hill5_hyperfine.c  hill5_multi_hybrid.c  hill5_multicomponent.c  hill5_multicomponent.h  hill5_plot.c  hill5_simplex.c  hill5map.c  hill5map_slow.c  hill6.c  hill6.h  hill6_devo.c  hill6_hybrid.c  hill6_simplex.c  hill6core.c  hill6core.h  hill6core_devo.c  hill6core_hybrid.c  hill6core_simplex.c  hill7.c  (+23 more)
