bin_PROGRAMS = twolayer5_devo twolayer5_simplex twolayer5_hybrid hill5_devo hill5_simplex hill5_hybrid twolayer6_devo twolayer6_simplex twolayer6_hybrid hill6_devo hill6_simplex hill6_hybrid hill6core_devo hill6core_simplex hill6core_hybrid hill7_devo hill7_simplex hill7_hybrid hill5map hill5_plot hill5_multi_hybrid hill5map_slow
twolayer5_devo_SOURCES = twolayer5_devo.c twolayer5.c twolayer5.h devo2.h devo2.c grow_array.h grow_array.c read_data.c
twolayer5_simplex_SOURCES = twolayer5_simplex.c twolayer5.c twolayer5.h grow_array.h grow_array.c read_data.c
twolayer5_hybrid_SOURCES = twolayer5_hybrid.c twolayer5.c twolayer5.h devo2.h devo2.c grow_array.h grow_array.c read_data.c
hill5_devo_SOURCES = hill5_devo.c hill5.c hill5.h devo2.h devo2.c grow_array.h grow_array.c read_data.c
hill5_simplex_SOURCES = hill5_simplex.c hill5.c hill5.h grow_array.h grow_array.c read_data.c
hill5_hybrid_SOURCES = hill5_hybrid.c hill5.c devo2.h devo2.c grow_array.h grow_array.c read_data.c
twolayer6_devo_SOURCES = twolayer6_devo.c twolayer6.c twolayer6.h devo2.h devo2.c grow_array.h grow_array.c read_data.c
twolayer6_simplex_SOURCES = twolayer6_simplex.c twolayer6.c twolayer6.h grow_array.h grow_array.c read_data.c
twolayer6_hybrid_SOURCES = twolayer6_hybrid.c twolayer6.c twolayer6.h devo2.h devo2.c grow_array.h grow_array.c read_data.c
hill6_devo_SOURCES = hill6_devo.c hill6.c hill6.h devo2.h devo2.c grow_array.h grow_array.c read_data.c
hill6_simplex_SOURCES = hill6_simplex.c hill6.c hill6.h grow_array.h grow_array.c read_data.c
hill6_hybrid_SOURCES = hill6_hybrid.c hill6.c hill6.h devo2.h devo2.c grow_array.h grow_array.c read_data.c
hill6core_devo_SOURCES = hill6core_devo.c hill6core.c hill6core.h devo2.h devo2.c grow_array.h grow_array.c read_data.c
hill6core_simplex_SOURCES = hill6core_simplex.c hill6core.c hill6core.h grow_array.h grow_array.c read_data.c
hill6core_hybrid_SOURCES = hill6core_hybrid.c hill6core.c hill6core.h devo2.h devo2.c grow_array.h grow_array.c read_data.c
hill7_devo_SOURCES = hill7_devo.c hill7.c hill7.h devo2.h devo2.c grow_array.h grow_array.c read_data.c
hill7_simplex_SOURCES = hill7_simplex.c hill7.c hill7.h grow_array.h grow_array.c read_data.c
hill7_hybrid_SOURCES = hill7_hybrid.c hill7.c hill7.h devo2.h devo2.c grow_array.h grow_array.c read_data.c
hill5map_SOURCES = hill5map.c hill5.c hill5.h devo2.h devo2.c grow_array.h grow_array.c read_data.c thinline.h thinline.c
hill5_plot_SOURCES = hill5_plot.c hill5.c hill5.h grow_array.h grow_array.c read_data.c
hill5_multi_hybrid_SOURCES = hill5_multi_hybrid.c hill5_multicomponent.c hill5_multicomponent.h devo2.h devo2.c grow_array.h grow_array.c read_data.c
hill5map_slow_SOURCES = hill5map_slow.c hill5.c hill5.h devo2.h devo2.c grow_array.h grow_array.c read_data.c thinline.h thinline.c
bin_SCRIPTS = noisescript.py noisescript2.py
EXTRA_DIST = $(bin_SCRIPTS)
