dnl Process this file with autoconf to produce a configure script.
AC_INIT(devo2.c)
AM_INIT_AUTOMAKE(analytic_infall,1.3)

dnl Checks for programs.
AC_PROG_CC

dnl Checks for libraries.
AC_CHECK_LIB(m,main)
AC_CHECK_LIB(cfitsio,main)
AC_CHECK_LIB(gslcblas,main)
AC_CHECK_LIB(gsl,main,[AC_DEFINE([HAVE_LIBGSL]) LIBS="-lgsl $LIBS"],AC_ERROR([Gnu Scientific Library not found]))

AM_PATH_GSL(1.3, ,AC_ERROR([Version 1.3 or greater of Gnu Scientific Library Required]))

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_PROG_INSTALL
AC_OUTPUT(Makefile)
